--- a/blockvalues.yml
+++ b/blockvalues.yml
@@ -39,6 +39,8 @@ teamjoindeathreset: true
 limits:
   COBBLESTONE: 10000
   NETHERRACK: 1000
+  SKULL: 200
+  CAKE_BLOCK: 1
   #LOG:3: 10
   
 # This section lists the value of a block. Value must be an integer.
@@ -59,15 +61,15 @@ blocks:
   BEACON: 100
   BED_BLOCK: 1
   BEDROCK: 0
-  BEETROOT_BLOCK: 1
+  BEETROOT_BLOCK: 2
   BIRCH_DOOR: 1
   BIRCH_FENCE: 1
   BIRCH_FENCE_GATE: 1
   BIRCH_WOOD_STAIRS: 1
-  BLACK_GLAZED_TERRACOTTA: 1
-  BLACK_SHULKER_BOX: 1
-  BLUE_GLAZED_TERRACOTTA: 1
-  BLUE_SHULKER_BOX: 1
+  BLACK_GLAZED_TERRACOTTA: 3
+  BLACK_SHULKER_BOX: 10
+  BLUE_GLAZED_TERRACOTTA: 3
+  BLUE_SHULKER_BOX: 10
   BOAT: 2
   BOAT_ACACIA: 2
   BOAT_BIRCH: 2
@@ -79,34 +81,35 @@ blocks:
   BREWING_STAND: 20
   BRICK: 5
   BRICK_STAIRS: 5
-  BROWN_GLAZED_TERRACOTTA: 1
-  BROWN_SHULKER_BOX: 1
+  BROWN_GLAZED_TERRACOTTA: 3
+  BROWN_SHULKER_BOX: 10
   BURNING_FURNACE: 10
   CACTUS: 1
-  CAKE_BLOCK: 1
-  CARPET: 1
+  #its a lie
+  CAKE_BLOCK: 10000000000000000000000000
+  CARPET: 3
   CAULDRON: 10
   CHEST: 2
-  CHORUS_FLOWER: 1
-  CHORUS_PLANT: 1
+  CHORUS_FLOWER: 2
+  CHORUS_PLANT: 2
   CLAY: 2
   COAL_BLOCK: 9
-  COAL_ORE: 0
+  COAL_ORE: 1
   COBBLE_WALL: 1
   COBBLESTONE: 1
   COBBLESTONE_STAIRS: 1
   COCOA: 1
-  CONCRETE: 1
-  CONCRETE_POWDER: 1
-  CYAN_GLAZED_TERRACOTTA: 1
-  CYAN_SHULKER_BOX: 1
+  CONCRETE: 5
+  CONCRETE_POWDER: 5
+  CYAN_GLAZED_TERRACOTTA: 3
+  CYAN_SHULKER_BOX: 10
   DARK_OAK_DOOR: 1
   DARK_OAK_FENCE: 1
   DARK_OAK_FENCE_GATE: 1
   DARK_OAK_STAIRS: 1
   DAYLIGHT_DETECTOR: 10
   DAYLIGHT_DETECTOR_INVERTED: 10
-  DEAD_BUSH: 1
+  DEAD_BUSH: 2
   DETECTOR_RAIL: 10
   DIAMOND_BLOCK: 300
   DIODE: 5
@@ -120,7 +123,7 @@ blocks:
   DRAGON_EGG: 150
   DROPPER: 5
   EMERALD_BLOCK: 150
-  EMERALD_ORE: 0
+  EMERALD_ORE: 1
   ENCHANTMENT_TABLE: 150
   END_BRICKS: 2
   ENDER_CHEST: 150
@@ -130,21 +133,21 @@ blocks:
   EXPLOSIVE_MINECART: 10
   FENCE: 1
   FENCE_GATE: 1
-  FIRE: 0
+  FIRE: 5
   FLOWER_POT: 5
   FROSTED_ICE: 1
-  FURNACE: 10
+  FURNACE: 7
   GLASS: 2
-  GLOWSTONE: 1
+  GLOWSTONE: 5
   GOLD_BLOCK: 150
-  GOLD_ORE: 0
+  GOLD_ORE: 1
   GRASS: 5
   GRASS_PATH: 5
-  GRAY_GLAZED_TERRACOTTA: 1
-  GRAY_SHULKER_BOX: 1
-  GRAVEL: 1
-  GREEN_GLAZED_TERRACOTTA: 1
-  GREEN_SHULKER_BOX: 1
+  GRAY_GLAZED_TERRACOTTA: 3
+  GRAY_SHULKER_BOX: 10
+  GRAVEL: 2
+  GREEN_GLAZED_TERRACOTTA: 3
+  GREEN_SHULKER_BOX: 10
   HARD_CLAY: 2
   HAY_BLOCK: 2
   HOPPER: 10
@@ -155,7 +158,7 @@ blocks:
   IRON_BLOCK: 10
   IRON_DOOR_BLOCK: 5
   IRON_FENCE: 5
-  IRON_ORE: 0
+  IRON_ORE: 1
   IRON_PLATE: 5
   IRON_TRAPDOOR: 1
   ITEM_FRAME: 2
@@ -167,27 +170,27 @@ blocks:
   JUNGLE_WOOD_STAIRS: 1
   LADDER: 1
   LAPIS_BLOCK: 10
-  LAPIS_ORE: 0
-  LAVA: 0
+  LAPIS_ORE: 1
+  LAVA: 5
   LEAVES_2: 1
   LEAVES: 1
   LEVER: 1
-  LIGHT_BLUE_GLAZED_TERRACOTTA: 1
-  LIGHT_BLUE_SHULKER_BOX: 1
-  LIME_GLAZED_TERRACOTTA: 1
-  LIME_SHULKER_BOX: 1
+  LIGHT_BLUE_GLAZED_TERRACOTTA: 3
+  LIGHT_BLUE_SHULKER_BOX: 10
+  LIME_GLAZED_TERRACOTTA: 3
+  LIME_SHULKER_BOX: 10
   LOG: 1
   #Other log types - examples
   #LOG:3: 2
   LOG_2: 1
   LONG_GRASS: 1
-  MAGENTA_GLAZED_TERRACOTTA: 1
-  MAGENTA_SHULKER_BOX: 1
+  MAGENTA_GLAZED_TERRACOTTA: 3
+  MAGENTA_SHULKER_BOX: 10
   MAGMA: 1
-  MELON_BLOCK: 1
-  MELON_STEM: 1
+  MELON_BLOCK: 2
+  MELON_STEM: 2
   MINECART: 10
-  MOB_SPAWNER: 0
+  MOB_SPAWNER: 150
   MOSSY_COBBLESTONE: 2
   MYCEL: 5
   NETHER_BRICK: 2
@@ -197,59 +200,59 @@ blocks:
   NETHER_WART_BLOCK: 2
   NETHERRACK: 1
   NOTE_BLOCK: 10
-  OBSERVER: 1
+  OBSERVER: 2
   OBSIDIAN: 10
-  ORANGE_GLAZED_TERRACOTTA: 1
-  ORANGE_SHULKER_BOX: 1
+  ORANGE_GLAZED_TERRACOTTA: 3
+  ORANGE_SHULKER_BOX: 10
   PACKED_ICE: 5
   PAINTING: 2
-  PINK_GLAZED_TERRACOTTA: 1
-  PINK_SHULKER_BOX: 1
+  PINK_GLAZED_TERRACOTTA: 3
+  PINK_SHULKER_BOX: 10
   PISTON_BASE: 2
   PISTON_STICKY_BASE: 2
   PORTAL: 0
   POWERED_MINECART: 10
   POWERED_RAIL: 10
   PRISMARINE: 10
-  PUMPKIN_STEM: 1
-  PUMPKIN: 1
-  PURPLE_GLAZED_TERRACOTTA: 1
-  PURPLE_SHULKER_BOX: 1
-  PURPUR_BLOCK: 1
-  PURPUR_DOUBLE_SLAB: 1
-  PURPUR_PILLAR: 1
-  PURPUR_SLAB: 1
-  PURPUR_STAIRS: 1
-  QUARTZ_BLOCK: 1
-  QUARTZ_ORE: 0
-  QUARTZ_STAIRS: 1
-  QUARTZ: 1
+  PUMPKIN_STEM: 2
+  PUMPKIN: 2
+  PURPLE_GLAZED_TERRACOTTA: 3
+  PURPLE_SHULKER_BOX: 10
+  PURPUR_BLOCK: 10
+  PURPUR_DOUBLE_SLAB: 10
+  PURPUR_PILLAR: 10
+  PURPUR_SLAB: 10
+  PURPUR_STAIRS: 10
+  QUARTZ_BLOCK: 5
+  QUARTZ_ORE: 1
+  QUARTZ_STAIRS: 5
+  QUARTZ: 5
   RAILS: 1
-  RED_GLAZED_TERRACOTTA: 1
+  RED_GLAZED_TERRACOTTA: 3
   RED_MUSHROOM: 1
   RED_NETHER_BRICK: 2
   RED_ROSE: 1
   RED_SANDSTONE: 1
   RED_SANDSTONE_STAIRS: 1
-  RED_SHULKER_BOX: 1
+  RED_SHULKER_BOX: 10
   REDSTONE_BLOCK: 10
   REDSTONE_COMPARATOR_OFF: 10
   REDSTONE_COMPARATOR_ON: 10
   REDSTONE_COMPARATOR: 10
   REDSTONE_LAMP_OFF: 10
   REDSTONE_LAMP_ON: 10
-  REDSTONE_ORE: 0
+  REDSTONE_ORE: 1
   REDSTONE_TORCH_OFF: 5
   REDSTONE_TORCH_ON: 5
   REDSTONE_WIRE: 1
   SAND: 1
   SANDSTONE: 1
   SANDSTONE_STAIRS: 1
-  SEA_LANTERN: 1
+  SEA_LANTERN: 5
   SIGN_POST: 1
-  SILVER_GLAZED_TERRACOTTA: 1
-  SILVER_SHULKER_BOX: 1
-  SKULL: 10
+  SILVER_GLAZED_TERRACOTTA: 3
+  SILVER_SHULKER_BOX: 10
+  SKULL: 20
   SLIME_BLOCK: 10
   SMOOTH_BRICK: 2
   SMOOTH_STAIRS: 2
@@ -284,8 +287,8 @@ blocks:
   WATER_LILY: 5
   WEB: 10
   WHEAT: 1
-  WHITE_GLAZED_TERRACOTTA: 1
-  WHITE_SHULKER_BOX: 1
+  WHITE_GLAZED_TERRACOTTA: 3
+  WHITE_SHULKER_BOX: 10
   WOOD: 1
   WOOD_BUTTON: 1
   WOOD_DOOR: 1
@@ -297,6 +300,6 @@ blocks:
   WOOL: 1
   WORKBENCH: 1
   YELLOW_FLOWER: 1
-  YELLOW_GLAZED_TERRACOTTA: 1
-  YELLOW_SHULKER_BOX: 1
+  YELLOW_GLAZED_TERRACOTTA: 3
+  YELLOW_SHULKER_BOX: 10
   
