--- a/blockvalues.yml
+++ b/blockvalues.yml
@@ -86,7 +86,7 @@ blocks:
   BURNING_FURNACE: 10
   CACTUS: 1
   #its a lie
-  CAKE_BLOCK: 10000000000000000000000000
+  CAKE_BLOCK: 100
   CARPET: 3
   CAULDRON: 10
   CHEST: 2
